Edited wiki page through web user interface.

--- a/wiki/Ideas.wiki
+++ b/wiki/Ideas.wiki
@@ -152,6 +152,7 @@ Linked Bomb Chuckers (David)
 Mecha Bombers of DOOM! (David)
 Happy Ponies! (David) (+1 Mollie)
 TetherWar (Kevin)
+Tether (I don't like it but it's what we're registered as with google) (Kevin)
 Freebasing Moonrocks (I'm kidding about this one) (Kevin)
 MoonPy (It's accurate and I think it's kind of funny) (Kevin)
 
