--- a/wiki/Ideas.wiki
+++ b/wiki/Ideas.wiki
@@ -151,8 +151,8 @@ Robolink Melee (Jon)
 Linked Bomb Chuckers (David)
 Mecha Bombers of DOOM! (David)
 Happy Ponies! (David) (+1 Mollie)
-TetherWar (Kevin)
 Tether (I don't like it but it's what we're registered as with google) (Kevin)
+TetherWar (Or a variant of tether*) (Kevin)
 Freebasing Moonrocks (I'm kidding about this one) (Kevin)
 MoonPy (It's accurate and I think it's kind of funny) (Kevin)
 
