Edited wiki page through web user interface.

--- a/wiki/Ideas.wiki
+++ b/wiki/Ideas.wiki
@@ -83,7 +83,7 @@
      # Mystic Pyramids (+1 Jon) (+1 Dan) (+1 David)
      # Living Alien (+1 kevin, I think this would be cool to have something thats a giant organism with tentacles for tethers)
      # High Tech (+1 David) (+1 Kevin)
-     # Sandal Punk (+1 Dan) (what's this?)
+     # Sandal Punk (+1 Dan) (what's this?) (basically, Roman/Greek folks having tech higher then they should, like say steam powered boats, or mirror death rays)
      # Modernish (+1 David) (+1 Dan)
      # Smooth and Blobby
      # Spikey
@@ -171,7 +171,6 @@ Admittedly a game like this doesn't really need much of a story but do we want t
 
 Energy production?
 With OMBC you can see the 'energy' flow along the tethers and everything is interconnected. If we were to have seperate hubs should they have seperate energy supplies? This would make it somewhat more realistic and would also make seperate hubs a challenge because having everything interconnected would make you stronger since you can do power attacks from anywhere but also more vulnerable to attacks that go through the grid or in a key location.
-
 
 
 
