Edited wiki page through web user interface.

--- a/wiki/Ideas.wiki
+++ b/wiki/Ideas.wiki
@@ -26,6 +26,7 @@
   # higher powered shots 
   # more accurate shots 
   # better visibility
+  # regeneration
  * Special abilities that cost energy 
   # slower power bar 
   # power bar distance indicator
@@ -171,7 +172,6 @@ Admittedly a game like this doesn't really need much of a story but do we want t
 
 Energy production?
 With OMBC you can see the 'energy' flow along the tethers and everything is interconnected. If we were to have seperate hubs should they have seperate energy supplies? This would make it somewhat more realistic and would also make seperate hubs a challenge because having everything interconnected would make you stronger since you can do power attacks from anywhere but also more vulnerable to attacks that go through the grid or in a key location.
-
 
 
 
