Edited wiki page through web user interface.

--- a/wiki/Ideas.wiki
+++ b/wiki/Ideas.wiki
@@ -38,6 +38,7 @@
  * Undersea tether (extra cost?)
  * True spherical map (original moonbase was torus)
  * Full 3D map and buildings, allowing for camera rotation?
+ * Show energy pools on the minimap
 
 ===Feature  implementation order:===
    ====Phase 1:====
@@ -173,7 +174,6 @@ Admittedly a game like this doesn't really need much of a story but do we want t
 
 Energy production?
 With OMBC you can see the 'energy' flow along the tethers and everything is interconnected. If we were to have seperate hubs should they have seperate energy supplies? This would make it somewhat more realistic and would also make seperate hubs a challenge because having everything interconnected would make you stronger since you can do power attacks from anywhere but also more vulnerable to attacks that go through the grid or in a key location.
-
 
 
 
