--- a/wiki/Ideas.wiki
+++ b/wiki/Ideas.wiki
@@ -15,6 +15,7 @@
  * Compatibility with original game (it's dead)
  * only 1 pass on the power bar (that was annoying for me)
  * 4-player limit
+ * AA's insta-death ability?
 
 ===New stuff that wasn't in the original game but would be cool to have:===
  * tetherless hubs 
@@ -174,7 +175,6 @@ Admittedly a game like this doesn't really need much of a story but do we want t
 
 Energy production?
 With OMBC you can see the 'energy' flow along the tethers and everything is interconnected. If we were to have seperate hubs should they have seperate energy supplies? This would make it somewhat more realistic and would also make seperate hubs a challenge because having everything interconnected would make you stronger since you can do power attacks from anywhere but also more vulnerable to attacks that go through the grid or in a key location.
-
 
 
 
