Edited wiki page through web user interface.

--- a/wiki/Ideas.wiki
+++ b/wiki/Ideas.wiki
@@ -40,6 +40,7 @@
  * True spherical map (original moonbase was torus)
  * Full 3D map and buildings, allowing for camera rotation?
  * Show energy pools on the minimap
+ * Hotseat compatibility (at least for non-FoW games)
 
 ===Feature  implementation order:===
    ====Phase 1:====
@@ -179,8 +180,6 @@ With OMBC you can see the 'energy' flow along the tethers and everything is inte
 
 Wireless aspects?
 This is similar to the energy production idea but if you figure any unconnected devices must transmist data wirelessly then that could be intercepted. Maybe if we have many 'untethered' objects we can have an option where those things can be 'detected' from their transmissions. Maybe along the lines that they show up in FoW no matter what. This would definitely be a variant since that would drastically affect the usage of balloons. 
-
-
 
 
 
