Edited wiki page through web user interface.

--- a/wiki/OMBCfacts.wiki
+++ b/wiki/OMBCfacts.wiki
@@ -8,7 +8,12 @@ OMBC map editor uses a grid system for placing objects such as buildings, water,
   * mine = exactly 1 grid
 
 = Tether spacing stats =
-Tethers can not overlap each other. In OMBC if a player attempts to launch a tethered projectile to close to another tether a warning circle appears and the game will not allow the hub to fire. Using a special map and firing tethers in a circle 
+Tethers can not overlap each other. In OMBC if a player attempts to launch a tethered projectile to close to another tether a warning circle appears and the game will not allow the hub to fire. Using a blank map and firing tethers in a circle we have attempted to measure the minimum angle between tethers. As can be seen in the 2 images below:
+
+http://tether.googlecode.com/svn/wiki/images/rotation_example1.PNG
+http://tether.googlecode.com/svn/wiki/images/rotation_example2.PNG
+
+Only 11 tethers can be placed but it isn't even. While I may have made a mistake in placing I did perform this test a couple of times and recieved this result each time. I believe that when moving the pointer OMBC checks to see if you are within 30 degrees of another tether and prevents you from firing if you are (thereby giving each individual tether a 15 degree leeway on each side). I suspect the last tether is impossible to place because while there is technically a 12th 30 degree slice capable of fitting another tether the 'warning system' see's a 1 degree overlap that really doesn't exist. On a side note I think this is something else we can fix to make the system more even. 
 
 
 = Unit HP =
