Settings can now be loaded and saved

--- a/trunk/README
+++ b/trunk/README
@@ -10,7 +10,6 @@ http://www.pygame.org/download.shtml
 
 *WARNING* The latest version of Python, Python2.5, does not work with MoonPy and has resulted in partially locking up computer systems during testing. Do not use MoonPy with other versions of Python besides 2.4.
 
-RUNNING UNDER GNU/LINUX
+RUNNING Moon.Py
 ---------------------
-To run MoonPy simply CD into the tether directory and run:
-./MoonPy_linux
+Simply run moon.py
