--- a/wiki/Ideas.wiki
+++ b/wiki/Ideas.wiki
@@ -143,7 +143,7 @@
 ===Super Weapon Ideas:===
  * Nuke (bomb with the power/radius of a destroyed energy collector)
  * Super Virus (Virus still spreads if it hits tether not just building)
- * Mass Repair (Repairs multiple buildings within radius)
+ * Mass Repair (Repairs multiple buildings within radius, or repair buildings tethered to target)
  * Super Repair (Repairs multiple HP per shot)
 
 ===Other thoughts:===
@@ -180,8 +180,6 @@ With OMBC you can see the 'energy' flow along the tethers and everything is inte
 
 Wireless aspects?
 This is similar to the energy production idea but if you figure any unconnected devices must transmist data wirelessly then that could be intercepted. Maybe if we have many 'untethered' objects we can have an option where those things can be 'detected' from their transmissions. Maybe along the lines that they show up in FoW no matter what. This would definitely be a variant since that would drastically affect the usage of balloons. 
-
-
 
 
 
