--- a/wiki/Code_proposals.wiki
+++ b/wiki/Code_proposals.wiki
@@ -35,7 +35,7 @@ really be attributes and will use some other method to perform their inteded use
 
 
 = Version System =
-As the game progresses different versions will be made as upgrades occur. As features are implemented or changed is highly likely that networking, maps, save and preferences files will become incompatible. In order to prevent errors due to incompatibilities a version number will be hardcoded for each of these systems. In the event the game finds an incompatible version (such as for a recent update) then the game will be capable of taking the appropriate actions. The names of these variables and their values currently are:
+As the game progresses different versions will be made as upgrades occur. As features are implemented or changed it is highly likely that networking protocols, map files, save files and preference files will become incompatible. In order to prevent errors due to incompatibilities a version number will be hardcoded for each of these systems. In the event the game finds an incompatible version (such as for a recent update) then the game will be capable of taking the appropriate actions. The names of these variables and their values currently are:
   * game.settingsversion = 1 (for game settings)
   * game.networkversion = 0 (for networking)
   * game.mapversion = 0 (for maps)
